Refactored Java SDK to streamline offline metadata generation and service bootstrapping.